kubernetes/store/store-service.yml
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: jhipster
  labels:
    app: store
spec:
  selector:
    app: store
  type: ClusterIP
  ports:
  - name: http
    port: 8080
