kubernetes/store/store-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: store-gateway
  namespace: jhipster
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - store.35.195.81.130.nip.io
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - store.35.195.81.130.nip.io
#  - port:
#      number: 443
#      name: https
#      protocol: HTTPS
#    hosts:
#    - store.35.195.81.130.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store-gw-virtualservice
  namespace: jhipster
spec:
  hosts:
  - store.35.195.81.130.nip.io
  gateways:
  - store-gateway
  http:
  - match:
    - uri:
        prefix: /invoice/
    route:
    - destination:
        host: invoice
  - match:
    - uri:
        prefix: /notification/
    route:
    - destination:
        host: notification
  - match:
    - uri:
        prefix: /product/
    route:
    - destination:
        host: product
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: store
