kubernetes/store/store-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store-virtualservice
  namespace: jhipster
spec:
  hosts:
  - store
  http:
  - route:
    - destination:
        host: store
        subset: "v1"
      weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
